[gd_scene load_steps=2 format=3 uid="uid://bt0tf04ccvwwo"]

[ext_resource type="Script" path="res://ChatRoom/Chatroom.gd" id="1"]

[node name="Chatroom" type="CanvasLayer"]
script = ExtResource("1")

[node name="vbxChatRoomContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0

[node name="HBoxContainer" type="HBoxContainer" parent="vbxChatRoomContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="txtChatHistory" type="RichTextLabel" parent="vbxChatRoomContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true

[node name="itlUsers" type="ItemList" parent="vbxChatRoomContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="vbxChatRoomContainer"]
layout_mode = 2

[node name="txtMessage" type="LineEdit" parent="vbxChatRoomContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3

[node name="btnLogout" type="Button" parent="vbxChatRoomContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Logout"

[connection signal="text_submitted" from="vbxChatRoomContainer/HBoxContainer2/txtMessage" to="." method="_on_txt_message_text_submitted"]
[connection signal="pressed" from="vbxChatRoomContainer/HBoxContainer2/btnLogout" to="." method="_on_btnLogout_pressed"]
